--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-scroll-up-button": "^1.6.4",
     "react-typed": "^1.2.0",
     "web-vitals": "^1.1.0"
   },
